# dictyy

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
docs/: design.md  release_note_0.1.0.md  release_note_0.1.1.md  release_note_0.2.0.md  release_note_0.3.0.md
scripts/: generate_abstracts.py  import_mdx.py  preprocess_dict.py  sync-version.cjs
src/: App.tsx  Bubble.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  config.yaml.example  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: dictionary.rs  lib.rs  llm.rs  main.rs  screen_capture.rs  shortcuts.rs  tray.rs
src/components/: CollinsResult.tsx  EtymaResult.tsx  Gpt4Result.tsx  SearchSuggestions.tsx  WordResult.tsx
src/components/ui/: input.tsx
src/services/: dictionary.ts
